# vl53l0x_pigpio

./: .gitignore  GEMINI.md  LICENSE  README.md  Tasks-done-250903-2325.md  Tasks.md  Tasks.md:Zone.Identifier  ToDo.md  import_test.py  mise.toml  pyproject.toml  rename_task.py  temp_test.py
archives/: 20250904-0318-Tasks-done.md  20250904-1715-Tasks-done.md  20250904-1728-Tasks-done.md  20250904-1843-Tasks-done.md  20250905-1352-Tasks-done.md  20250905-1354-ToDo.md  20250905-1449-Tasks-done.md  20250905-1505-Tasks-done.md  20250905-1528-Tasks-done.md  20250905-1550-Tasks-done.md  20250905-1601-Tasks-done.md  20250905-1644-Tasks-done.md  20250908-0523-Tasks-done.md  20250908-0613-Tasks-done.md  20250908-0638-ToDo-done.md  20250908-0702-Tasks-done.md  20250908-0715-Tasks-done.md  20250908-0728-Tasks-done.md  20250908-0731-Tasks-done.md  Tasks-done-20250904-1738.md  Tasks-done-20250904-1801.md  Tasks-done-20250904-HHMM.md
docs/: PyPI.md  REFERENCE.md
samples/: calibrate_example.py  example.py  numpy_example.py
src/vl53l0x_pigpio/: __init__.py  __main__.py  cli.py  click_utils.py  clickutils.py  config_manager.py  constants.py  driver.py  driver_refactored.py  my_logger.py
tests/: test_01_driver.py  test_02_offset.py  test_03_config_manager.py  test_import.py
